# podbucket

./: README.md  pyproject.toml
.github/workflows/: test.yml
src/podbucket/: cli.py  convert.py  oai.py  resourcesync.py
tests/: test_convert.py  test_oai.py  test_resourcesync.py  test_storage.py
